--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -91,6 +91,7 @@
   <script src="/assets/js/plugins/chartist.min.js"></script>
   <!--  Notifications Plugin    -->
   <script src="/assets/js/plugins/bootstrap-notify.js"></script>
+  <script src="/assets/js/plugins/snows.js"></script>
   <!--    <script src="/assets/js/plugins/jszip.min.js"></script>-->
   <!--    <script src="/assets/js/plugins/FileSaver.min.js"></script>-->
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
