--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -8,7 +8,7 @@
 </style>
 <body data-offset="100" data-spy="scroll" data-target="#toc">
 <!-- Extra details for Live View on GitHub Pages -->
-<div class="wrapper ">
+<div class="wrapper " id="post">
   {% include sidebar/sidebar.html %}
   <div class="main-panel">
     <!-- Navbar -->
@@ -143,44 +143,8 @@
       }
   );
 </script>
-
-
 <!-- 飘雪花 -->
 <script type="text/javascript">
-  (function ($) {
-    $.fn.snow = function (options) {
-      var $flake = $('<div id="snowbox" />').css({'position': 'absolute', 'z-index': '9999', 'top': '-50px'}).html('❄'),
-          documentHeight = $(document).height(),
-          documentWidth = $(document).width(),
-          defaults = {
-            minSize: 5,
-            maxSize: 25,
-            newOn: 500,
-            flakeColor: getRandomColor() /* 此处可以定义雪花颜色，若要白色可以改为#FFFFFF */
-          },
-          options = $.extend({}, defaults, options);
-      var interval = setInterval(function () {
-        var startPositionLeft = Math.random() * documentWidth - 100,
-            startOpacity = 0.5 + Math.random(),
-            sizeFlake = options.minSize + Math.random() * options.maxSize,
-            endPositionTop = documentHeight - 200,
-            endPositionLeft = startPositionLeft - 500 + Math.random() * 500,
-            durationFall = documentHeight * 10 + Math.random() * 5000;
-        $flake.clone().appendTo('body').css({
-          left: startPositionLeft,
-          opacity: startOpacity,
-          'font-size': sizeFlake,
-          color: getRandomColor()
-        }).animate({
-          top: endPositionTop,
-          left: endPositionLeft,
-          opacity: 0.2
-        }, durationFall, 'linear', function () {
-          $(this).remove()
-        });
-      }, options.newOn);
-    };
-  })(jQuery);
   $(function () {
     $.fn.snow({
       minSize: 3, /* 定义雪花最小尺寸 */
@@ -198,5 +162,6 @@
 </script>
 </body>
 {% include plugins/toc.html container="#toc" %}
+{% include jekyll/post.jekyll %}
 {% include jekyll/format-href.jekyll %}
 </html>
