--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg  navbar-fixed-top navbar-absolute navbar-transparent navbar-translate fixed-top ">
+<nav class="navbar navbar-expand-lg  navbar-fixed-top navbar-absolute navbar-transparent text-white navbar-translate fixed-top ">
   <div class="container-fluid">
     <div class="navbar-wrapper">
       <div class="navbar-minimize">
@@ -18,39 +18,28 @@
       <span class="navbar-toggler-icon icon-bar"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end">
-      <form class="navbar-form">
-              <span class="bmd-form-group"><div class="input-group no-border">
-                <input class="form-control" placeholder="Search..." type="text" value="">
-                <button class="btn btn-white btn-round btn-just-icon" type="submit">
-                  <i class="material-icons">search</i>
-                  <div class="ripple-container"></div>
-                </button>
-              </div></span>
-      </form>
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/documents/index.html">
-            <i class="material-icons">book</i>
-            <p class="d-lg-none d-md-block">
-              Stats
-            </p>
-            <div class="ripple-container"></div>
-          </a>
-        </li>
+        <!--I18N-->
         <li class="nav-item dropdown">
-          <a aria-expanded="false" aria-haspopup="true" class="nav-link" data-toggle="dropdown"
-             href="javascript:;" id="navbarDropdownProfile">
-            <i class="material-icons">person</i>
-            <p class="d-lg-none d-md-block">
-              Account
-            </p>
+          {% assign locales = page.path | replace: '_', '' | replace: '.md' : '' | split: '/'%}
+          <a class="nav-item nav-link dropdown-toggle mr-md-2" href="{{page.url}}#" id="bd-versions" data-toggle="dropdown"
+             aria-haspopup="true" >
+            <i class="material-icons">translate </i>
+            {% for lang in site.data.langs %}
+              {% if lang.lang == locales[1] %}
+                {{ lang.label }}
+              {% endif %}
+            {% endfor %}
           </a>
-          <div aria-labelledby="navbarDropdownProfile" class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="/resume/index.html">Resume</a>
-            <a class="dropdown-item" href="#">Profile</a>
-            <a class="dropdown-item" href="#">Settings</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Log out</a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
+
+            {% for lang in site.data.langs %}
+              {% if lang.lang == locales[1] %}
+                <a class="dropdown-item active  dropdown-flag-holder" href="{{page.url}}#">{{ lang.label }}</a>
+              {% else %}
+                <a class="dropdown-item  dropdown-flag-holder" href="{{page.url | replace: locales[1] , lang.lang  }}">{{ lang.label }}</a>
+              {% endif %}
+            {% endfor%}
           </div>
         </li>
       </ul>
