--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,20 +1,3 @@
-<!--
-  ~ Copyright (c) 2018-2020.  the original author or authors.
-  ~  <p>
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at
-  ~  <p>
-  ~  http://www.apache.org/licenses/LICENSE-2.0
-  ~  <p>
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  ~
-  -->
-
 <head>
   <meta charset="utf-8"/>
   {% include title.html %}
@@ -25,10 +8,10 @@
   <!-- Canonical SEO -->
   <!--  Social tags      -->
   <meta
-      content="creative tim, html dashboard, html css dashboard, web dashboard, bootstrap 4 dashboard, bootstrap 4, css3 dashboard, bootstrap 4 admin, material dashboard bootstrap 4 dashboard, frontend, responsive bootstrap 4 dashboard, material design, material dashboard bootstrap 4 dashboard"
+      content=""
       name="keywords">
   <meta
-      content="Material Dashboard PRO is a Premium Material Bootstrap 4 Admin with a fresh, new design inspired by Google's Material Design."
+      content=""
       name="description">
 
   <!--     Fonts and icons     -->
@@ -99,10 +82,6 @@
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
   <!--    <script src="/assets/demo/demo.js"></script>-->
   <script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
-  <!--modules-->
-  <script src="/assets/data/modules.js"></script>
-  <!--sidebar-->
-  <script src="/assets/data/sidebar/{{page.collection}}.js"></script>
 
 
 </head>
