fix page to result convert bug

--- a/docs/assets/css/theme-dark.css
+++ b/docs/assets/css/theme-dark.css
@@ -32,9 +32,9 @@
     /*background-color: #141414 !important;*/
 }
 
-/*.theme-dark .markdown .highlight .w {*/
-/*    background-color: transparent;*/
-/*}*/
+.theme-dark .markdown .highlight .w {
+    background-color: transparent;
+}
 
 .theme-dark .markdown blockquote {
     background-color: #141414 !important;
