--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -20,10 +20,14 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <!-- CSS Files -->
   <link href="/assets/css/material-dashboard.min.css" rel="stylesheet"/>
-  <link href="/assets/css/highlight/base16.solarized.dark.css" rel="stylesheet"/>
+  <!--  <link href="/assets/css/material-dashboard-dark.min.css" rel="stylesheet"/>-->
+  <link href="/assets/css/highlight/base16.solarized.css" rel="stylesheet"/>
+  <!--  <link href="/assets/css/highlight/base16.solarized.dark.css" rel="stylesheet"/>-->
+  <!--  <link href="/assets/css/highlight/github.css" rel="stylesheet"/>-->
+  <!--  <link href="/assets/css/highlight/monokai.css" rel="stylesheet"/>-->
   <link href="/assets/css/markdown.css" rel="stylesheet"/>
-  <!--    <link href="/assets/css/theme.css" rel="stylesheet"/>-->
-  <link href="/assets/css/theme-dark.css" rel="stylesheet"/>
+  <!--      <link href="/assets/css/theme.css" rel="stylesheet"/>-->
+  <!--  <link href="/assets/css/theme-dark.css" rel="stylesheet"/>-->
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <!--<link href="/assets/demo/demo.css" rel="stylesheet" />-->
 
