--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -6,7 +6,7 @@
 <style>
 
 </style>
-<body data-offset="140" data-spy="scroll" data-target="#toc" style="background-color: whitesmoke" id="body">
+<body data-offset="150" data-spy="scroll" data-target="#toc" style="background-color: whitesmoke" id="body">
 
 <!-- Extra details for Live View on GitHub Pages -->
 <div class="wrapper " id="post">
@@ -44,7 +44,7 @@
 
           <div class="d-none d-xl-block col-lg-2 sticky-top flex-order-2">
 
-            <div style="border-left: 1px red solid;padding-left: 1em">
+            <div style="border-left: 1px #9c27b0  solid;padding-left: 1em">
 
 
               <div class="toc" id="toc">
