--- a/docs/_includes/sidebar/sidebar.html
+++ b/docs/_includes/sidebar/sidebar.html
@@ -15,4 +15,5 @@
   <div class="sidebar-wrapper">
     {% include sidebar/sidebar-menu.html %}
   </div>
+  <div class="sidebar-background" style="background-image: url(/assets/img/sidebar-1.jpg);"></div>
 </div>
