--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -21,10 +21,10 @@
   <!-- CSS Files -->
   <link href="/assets/css/material-dashboard.min.css" rel="stylesheet"/>
   <!--  <link href="/assets/css/material-dashboard-dark.min.css" rel="stylesheet"/>-->
-  <link href="/assets/css/highlight/base16.solarized.css" rel="stylesheet"/>
+  <!--  <link href="/assets/css/highlight/base16.solarized.css" rel="stylesheet"/>-->
   <!--  <link href="/assets/css/highlight/base16.solarized.dark.css" rel="stylesheet"/>-->
   <!--  <link href="/assets/css/highlight/github.css" rel="stylesheet"/>-->
-  <!--  <link href="/assets/css/highlight/monokai.css" rel="stylesheet"/>-->
+  <link href="/assets/css/highlight/monokai.css" rel="stylesheet"/>
   <link href="/assets/css/markdown.css" rel="stylesheet"/>
   <!--      <link href="/assets/css/theme.css" rel="stylesheet"/>-->
   <!--  <link href="/assets/css/theme-dark.css" rel="stylesheet"/>-->
