--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -62,7 +62,7 @@
 
   $(document).ready(function () {
         mermaid.initialize({
-          theme: 'dark',
+          theme: 'forest',
           sequence: {
             showSequenceNumbers: true
           }
