--- a/docs/_includes/sidebar/sidebar-user.html
+++ b/docs/_includes/sidebar/sidebar-user.html
@@ -4,19 +4,19 @@
     <img :src="sidebar.logo"/>
   </div>
   <div class="user-info">
-    <a class="username" data-toggle="collapse" href="#collapseExample">
+    <a class="username" data-toggle="collapse" href="#modules">
               <span>
                 <span v-html="sidebar.name"></span>
                 <b class="caret"></b>
               </span>
     </a>
-    <div class="collapse" id="collapseExample">
+    <div class="collapse" id="modules">
       <ul class="nav">
         <li class="nav-item" v-for="module in modules">
-          <a :href="module.link" class="nav-link" v-if="module.id != page.module">
-                        <span class="sidebar-mini">
-                                    <img :src="module.logo"/>
-                        </span>
+          <a :href="module.link" class="nav-link" v-if="module.id != page.collection">
+            <span class="sidebar-mini">
+              <img :src="module.logo" width="24px" height="24px"/>
+            </span>
             <span class="sidebar-normal" v-html="module.name">  </span>
           </a>
         </li>
