--- a/docs/_includes/navbar/navbar.html
+++ b/docs/_includes/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg  navbar-fixed-top navbar-absolute navbar-translate bg-primary">
+<nav class="navbar navbar-expand-lg  navbar-fixed-top navbar-transparent text-white navbar-absolute navbar-translate">
   <div class="container-fluid">
     <div class="navbar-wrapper">
       <div class="navbar-minimize">
