--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -20,6 +20,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <!-- CSS Files -->
   <link href="/assets/css/material-dashboard.min.css" rel="stylesheet"/>
+  <link href="/assets/css/material-kit.min.css" rel="stylesheet"/>
   <!--  <link href="/assets/css/material-dashboard-dark.min.css" rel="stylesheet"/>-->
   <!--  <link href="/assets/css/highlight/base16.solarized.css" rel="stylesheet"/>-->
   <!--  <link href="/assets/css/highlight/base16.solarized.dark.css" rel="stylesheet"/>-->
@@ -82,7 +83,8 @@
   <!--    <script src="/assets/js/plugins/jszip.min.js"></script>-->
   <!--    <script src="/assets/js/plugins/FileSaver.min.js"></script>-->
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="/assets/js/material-dashboard.min.js" type="text/javascript"></script>
+  <!--  <script src="/assets/js/material-dashboard.min.js" type="text/javascript"></script>-->
+  <script src="/assets/js/material-kit.min.js" type="text/javascript"></script>
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
   <!--    <script src="/assets/demo/demo.js"></script>-->
   <script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
