--- a/docs/assets/css/markdown.css
+++ b/docs/assets/css/markdown.css
@@ -273,6 +273,10 @@ code.highlighter-rouge {
     width: 100%;
 }
 
-
+.main-raised {
+    margin: -60px 30px 0;
+    border-radius: 6px;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, .14), 0 6px 30px 5px rgba(0, 0, 0, .12), 0 8px 10px -5px rgba(0, 0, 0, .2);
+}
 
 
