--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -87,7 +87,6 @@
   <script src="/assets/js/material-kit.min.js" type="text/javascript"></script>
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
   <!--    <script src="/assets/demo/demo.js"></script>-->
-  <script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
 </head>
