--- a/docs/_includes/navbar/navbar.html
+++ b/docs/_includes/navbar/navbar.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg bg-primary" style="margin-left: 260px" color-on-scroll="100"
+<nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg navbar-transparent bg-primary" style="margin-left: 260px"
+     color-on-scroll="100"
      id="sectionsNav">
   <div class="container">
     <div class="navbar-translate">
