--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -23,6 +23,7 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto text-center">
             <h1 class="title text-white" style="font-family: Metropolis,sans-serif">{{page.title}}</h1>
+            <h4>{{page.description | markdownify }}</h4>
             <br>
           </div>
         </div>
@@ -31,16 +32,13 @@
     <div class="main main-raised">
       <div class="container-fluid">
 
-        <div class="row flex-md-nowrap markdown">
+        <div class="row flex-md-nowrap markdown" style="padding: 1em;padding-top: 30px;min-height: 50vh">
           <div class="d-none d-xl-block col-lg-2 sticky-top flex-order-2">
           </div>
-          <main class="col-xl-8 col-lg-12  " role="main">
-            <article>
-              {{ content }}
-            </article>
-          </main>
-
-          <div class="d-none d-xl-block col-lg-2 sticky-top flex-order-2" style="top: 100px">
+          <article class="col-xl-8 col-lg-12  ">
+            {{ content }}
+          </article>
+          <div class="d-none d-xl-block col-lg-2 sticky-top flex-order-2" style="top: 100px;padding-top: 2em;">
             <div style="border-left: 1px #9c27b0  solid;padding-left: 1em">
               <div class="toc" id="toc">
               </div>
