--- a/docs/_includes/navbar/navbar.html
+++ b/docs/_includes/navbar/navbar.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg navbar-transparent bg-primary" style="margin-left: 260px"
+<nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg navbar-transparent bg-primary"
      color-on-scroll="100"
      id="sectionsNav">
   <div class="container">
     <div class="navbar-translate">
-      <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit-pro/index.html">{{ site.title }}</a>
+      <a class="navbar-brand" href="{{ site.url }}">{{ site.title}}</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
         <span class="navbar-toggler-icon"></span>
