--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -18,7 +18,7 @@
 
 
     <div class="page-header header-filter header-small card-background" data-parallax="true"
-         style="background-image: url('{{ page.banner }}');transform: translate3d(0px, 0px, 0px);">
+         style="background-image: url('{{ page.banner }}');transform: translate3d(0px, 0px, 0px);min-height: 400px;max-height: 600px">
       <div class="container" style="height: auto">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto text-center">
