--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -144,11 +144,11 @@
 <!-- 飘雪花 -->
 <script type="text/javascript">
   $(function () {
-    $.fn.snow({
-      minSize: 3, /* 定义雪花最小尺寸 */
-      maxSize: 66,/* 定义雪花最大尺寸 */
-      newOn: 666  /* 定义密集程度，数字越小越密集 */
-    });
+    // $.fn.snow({
+    //   minSize: 3, /* 定义雪花最小尺寸 */
+    //   maxSize: 66,/* 定义雪花最大尺寸 */
+    //   newOn: 666  /* 定义密集程度，数字越小越密集 */
+    // });
 
     // 每张图片居中处理
     // $("img[loading='lazy']").parent("p").css("text-align","center");
