--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -63,6 +63,9 @@
           theme: 'forest',
           sequence: {
             showSequenceNumbers: true
+          },
+          er:{
+            fontSize: 18
           }
         });
         mermaid.init({}, ".language-mermaid, .language-sequence");
